[ios] Fix TabGrid ScrollView Offset When Rotating Underneath History

Move offset calculation away from -viewDidLayoutSubviews and into -viewDidAppear and -viewWillTransitionIntoSize so that the logic lies in places where the newly rotated frame has been defined.
-viewDidAppear covers first-time calculations and -viewWillTransitionIntoSize handles rotations.

Video: https://drive.google.com/open?id=1ziE4y_N4FYZuR5cR10i-wuJ1Zkmqzdyv

Bug: 862544
Change-Id: Ib493e7395041d498abb5b77d6c8732dc443b01e3
Reviewed-on: https://chromium-review.googlesource.com/1141287
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Chris Lu <thegreenfrog@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577795}
Former-commit-id: a1b22872e1807a2757589b15f20e8c956b7e54f9